alignment of nav secondary fixed so that items line up vertically with the primary nav items. this was very noticable in mobile.

--- a/frontend/src/App/styles/components/_nav.scss
+++ b/frontend/src/App/styles/components/_nav.scss
@@ -79,7 +79,6 @@
 
     &--item {
       border-left: 4px solid $white;
-      height: 100%;
       width: 100%;
       margin: 0.5rem 0;
 
